# euf-viper

./: .gitattributes  .gitignore  Cargo.toml  JOURNAL.md  MEMORY.md  PLAN.md  README.md  build.rs  rust-toolchain.toml
benches/: compare_z3.py  compare_z3_repeat.py
benchmarks/: README.md  fabric-smoke-manifest.jsonl  qf_uf_2025_metadata.json
campaigns/: best-overall-qf-uf-2026-07.json  component-quotient-ram-census-v1.json  solver-releases-2026-07.json  t1-typed-parser-timing-v1.json  t3-m0-component-pressure-v1.json  t6-theory-dag-hard10-v1.json  t6-theory-dag-p0-qg12-v1.json  t6-wmi-job-146075-disposition-v1.json  t6-wmi-rust-toolchain-1.96.0-v1.json  t7-sat-impact-2026-07.json  t8-assertion-lineage-census-v1.json  t8-scalar-frontier-census-v1.json  t9-rollback-control-manifest-20260713.jsonl  viper-fabric-2026-07.json  viper-fabric-f0-shadow-v1.json  viper-fabric-f0-smoke-v1.jsonl  viper-pgo-goel-holdout-v1.json
scripts/: build_optimized.sh
src/: assertion_lineage.rs  bool_dag_projection.rs  bool_dag_telemetry.rs  eq_abstraction.rs  finite_analysis.rs  finite_column_search.rs  finite_table_diagnostics.rs  finite_table_source.rs  forbidden_orbit_probe.rs  forbidden_table_mdd.rs  forbidden_table_mvdd.rs  hall_certificate.rs  main.rs  model_scout.rs  nofollow_io.rs  novelty_census.rs  orbit_canon.rs  orbit_cover.rs  phase_scout.rs  production_evidence.rs  quotient_csp.rs  quotient_state_search.rs  right_translation_exact_cover.rs  rollback_euf.rs  rollback_propagator.rs  smt2_stream.rs  stabilizer_order.rs  t10_ackermann.rs  t6_bool_dag_census.rs  t7_explanation.rs  t9_ackermann.rs  unconditional_leaf_quotient.rs
tests/: production_feature_matrix.rs  sealed_build_fixture.py  t5_linux_e2e_driver.py  test_adjudicate_pgo_holdout.py  test_analyze_ab_opportunities.py  test_analyze_campaign.py  test_analyze_eq_fact_routes.py  test_analyze_euf_bva.py  test_analyze_finite_structures.py  test_analyze_profile_log.py  test_analyze_results.py  test_analyze_staged_campaign.py  test_assertion_lineage.py  test_assertion_lineage_census.py  test_attest_sealed_build.py  test_audit_fabric_shadow.py  test_audit_rollback_control.py  test_audit_shadow_campaign.py  test_audit_staged_shadow_campaign.py  test_bind_campaign_cpu.py  test_build_family_manifest.py  (+73 more)
(+509 files in other folders)
