[package]
name = "euf-viper"
version = "0.1.0"
edition = "2024"

[features]
default = ["finite-symmetry"]
certificates = ["dep:serde", "dep:serde_json", "dep:sha2"]
finite-symmetry = []

[dependencies]
rustsat = "0.7.5"
rustsat-cadical = { version = "0.7.5", features = ["quiet", "v2-2-1"] }
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
varisat = "0.2.2"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
kissat = "0.1.0"

[target.'cfg(not(all(target_os = "linux", target_arch = "x86_64")))'.dependencies]
rustsat-kissat = { version = "0.7.5", features = ["quiet"] }

[patch.crates-io]
kissat = { path = "vendor/kissat" }
rustsat-cadical = { path = "vendor/rustsat-cadical" }

[profile.release]
codegen-units = 1
lto = "thin"
